Ping-Pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
      - name: shared-volume
        persistentVolumeClaim:
          claimName: shared-claim
      containers:
        - name: ping-pong
          image: thefenix/dok-ping-pong:0.2
          volumeMounts:
          - name: shared-volume
            mountPath: /usr/src/app/files
