Ping-Pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: applications
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
